Correction souci WebServices
Il fallait rajouter les librairies dans les artifacts
project structures -> artifacts -> available elements -> clic droit -> Put Into Output Root

--- a/web/home/home.html
+++ b/web/home/home.html
@@ -1,4 +1,4 @@
-<div  ng-app="homeApp" ng-controller="homeController">
+<div  ng-app="home" ng-controller="homeController">
         <div id="home_authentification">
             <table width="100%">
                 <tr>
