--- a/web/home/home.html
+++ b/web/home/home.html
@@ -42,7 +42,9 @@
         </div>
 
         <div id="home_full_identification">
-            <input id="full_identification_submit" type="submit" value="Full Account Creation" ng-submit="goToFullLogUpPage()">
+            <form ng-submit="goToFullLogUpPage()">
+                <input id="full_identification_submit" type="submit" value="Full Account Creation"/>
+            </form>
         </div>
 
 </div>
