--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="homeApp">
+<html ng-app="app">
 <head>
     <meta charset ="UTF-8"/>
     <title>Fire Up</title>
@@ -7,11 +7,14 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
 
-    <script src="home/homeCtrl.js"></script>
+    <script src="login/loginCtrl.js"></script>
+    <script src="signup/signupCtrl.js"></script>
+    <script src="content/contentCtrl.js"></script>
 
-    <script src="route/router.js"></script>
+    <script src="index.js"></script>
 
-    <link href="home/home.css" style="test:css" rel="stylesheet" />
+    <link href="login/login.css" style="test:css" rel="stylesheet" />
+    <link href="signup/signup.css" style="test:css" rel="stylesheet" />
 </head>
 
 <body>
