--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
     <script src="login/loginCtrl.js"></script>
     <script src="signup/signupCtrl.js"></script>
     <script src="content/contentCtrl.js"></script>
+    <script src="home/homeCtrl.js"></script>
 
     <script src="index.js"></script>
 
