--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,11 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
-
     <script src="login/loginCtrl.js"></script>
+    <script src="menu/menuCtrl.js"></script>
+    <script src="home/homeCtrl.js"></script>
     <script src="signup/signupCtrl.js"></script>
     <script src="content/contentCtrl.js"></script>
-    <script src="home/homeCtrl.js"></script>
 
     <script src="index.js"></script>
 
