Refactor state menu

--- a/web/login/login.html
+++ b/web/login/login.html
@@ -4,7 +4,7 @@
                     <div id="authentification_params" >
                         <input type="text" ng-model="usernameLogIn" placeholder="username">
                         <input type="password" ng-model="passwordLogIn" placeholder="password">
-                        <form ng-submit="content()">
+                        <form ng-submit="home()">
                             <input type="submit" value="Content Page">
                         </form>
                     </div>
