--- a/web/menu/menu.html
+++ b/web/menu/menu.html
@@ -1,4 +1,6 @@
 <div>
-    menu bar
+    <a ui-sref=".home">home</a>
+    <a ui-sref=".profile">profile</a>
+    <a ui-sref=".content">content</a>
     <div ui-view></div>
 </div>
