--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,7 @@
     <script src="index.js"></script>
 
     <link href="login/login.css" style="test:css" rel="stylesheet" />
-    <link href="signup/signup.css" style="test:css" rel="stylesheet" />
+    <link href="profile/profile.css" style="test:css" rel="stylesheet" />
 </head>
 
 <body>
