Dev web services in progress

--- a/web/login/login.html
+++ b/web/login/login.html
@@ -5,8 +5,8 @@
             <div id="authentification_params" >
                 <input type="text" ng-model="usernameSignin" placeholder="username">
                 <input type="password" ng-model="passwordSignin" placeholder="password">
-                <form ng-submit="home()">
-                    <input type="submit" value="Content Page">
+                <form ng-submit="signin()">
+                    <input type="submit" value="SIGN IN">
                 </form>
             </div>
         </div>
@@ -33,7 +33,7 @@
                             <tr>
                                 <th></th>
                                 <th><form ng-submit="signup()">
-                                    <input type="submit" value="home page">
+                                    <input type="submit" value="SIGN UP">
                                 </form></th>
                             </tr>
                         </table>
