CSS homepage bullshit but lookable DONE

--- a/web/login/login.html
+++ b/web/login/login.html
@@ -1,7 +1,7 @@
 <div id="loginPage" ng-controller="loginController">
 
         <div id="login_authentification">
-            <div id="application_name" >Fire Up</div>
+            <div id="application_name" ><b>Fire Up</b></div>
             <div id="authentification_params" >
                 <form ng-submit="signin()">
                     <input type="text" ng-model="usernameSignin" placeholder="username">
