CSS fixed nav bar DONE

--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,10 @@
 
     <script src="index.js"></script>
 
+    <link href="bower_components/normalize.css" style="test:css" rel="stylesheet" />
     <link href="login/login.css" style="test:css" rel="stylesheet" />
     <link href="profile/profile.css" style="test:css" rel="stylesheet" />
+    <link href="menu/menu.css" style="test:css" rel="stylesheet" />
 </head>
 
 <body>
