--- a/web/menu/menu.html
+++ b/web/menu/menu.html
@@ -1,6 +1,18 @@
-<div>
-    <a ui-sref=".home">home</a>
-    <a ui-sref=".profile">profile</a>
-    <a ui-sref=".content">content</a>
-    <div ui-view></div>
+<div >
+    <div id="navigation" >
+        <a ui-sref=".home">home</a>
+        <a ui-sref=".profile">profile</a>
+        <a ui-sref=".content">content</a>
+    </div>
+    <div id="homeContent" ui-view></div>
 </div>
+
+</br></br></br></br></br></br></br></br></br></br></br></br></br>
+</br></br></br></br></br></br></br></br></br></br></br></br></br>
+</br></br></br></br></br></br></br></br></br></br></br></br></br>
+</br></br></br></br></br></br></br></br></br></br></br></br></br>
+</br></br></br></br></br></br></br></br></br></br></br></br></br>
+</br></br></br></br></br></br></br></br></br></br></br></br></br>
+
+
+
