navigation bar DONE + new page "Settings" to add where user will set their page (language etc...)

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <script src="home/homeCtrl.js"></script>
     <script src="profile/profileCtrl.js"></script>
     <script src="content/contentCtrl.js"></script>
+    <script src="settings/settingsCtrl.js"></script>
 
     <script src="index.js"></script>
 
@@ -18,10 +19,11 @@
     <link href="login/login.css" style="test:css" rel="stylesheet" />
     <link href="profile/profile.css" style="test:css" rel="stylesheet" />
     <link href="menu/menu.css" style="test:css" rel="stylesheet" />
+    <link href="index.css" style="test:css" rel="stylesheet" />
 </head>
 
 <body>
-    <div ui-view>
+    <div id="page" ui-view>
 
     </div>
 </body>
