--- a/web/menu/menu.html
+++ b/web/menu/menu.html
@@ -1,8 +1,11 @@
-<div >
+<div>
     <div id="navigation" >
         <a ui-sref=".home">home</a>
         <a ui-sref=".profile">profile</a>
         <a ui-sref=".content">content</a>
+
+        <input id="searchBarInput" type="text" placeholder="Type your research here" />
+        <a id="settings" ui-sref=".settings">settings</a>
     </div>
     <div id="homeContent" ui-view></div>
 </div>
