--- a/web/profile/profile.html
+++ b/web/profile/profile.html
@@ -6,7 +6,8 @@
             <input type="text" ng-model="lastnameProfile" placeholder="lastname" />
             <input type="radio" ng-model="sexProfile" /> Female
             <input type="radio" ng-model="sexProfile" /> Male
-            <input type="date" ng-model="birthDate" popup="d MMM yyyy" options="dateOptions" opened="opened" custom-datepicker/>
+            <input type="date" ng-model="birthDate" popup="d MMM yyyy" options="dateOptions"
+                   opened="opened" custom-datepicker />
 
         </form>
     </div>
