Content form / Profile form
HTML+CSS OK

Work in progress

--- a/web/content/content.html
+++ b/web/content/content.html
@@ -1,3 +1,43 @@
-<div ng-app="contentApp">
-    <h2>content</h2>
+<div ng-app="contentApp" ng-controller="contentController">
+    <h2 id="contentTitle">content</h2></br>
+    <div id="contentPage">
+        <form class="contentForm" ng-submit="validateVideo()">
+            <div id="videoInformation">
+                <label class="informationContent"><b>Add a video -----------------------------------------------------</b></label>
+                </br></br>
+                <input class="contentInput" type="text" ng-model="titleVideo" placeholder="title" /></br>
+                <input class="contentInput" type="text" ng-model="descriptionVideo" placeholder="a quick description helps to promote" /></br>
+                <input class="contentInput" type="text" ng-model="linkVideo" placeholder="link of video" /></br>
+                <input class="contentInput" type="text" ng-model="listTagsVideo" placeholder="list of tags separate by a space" />
+                </br></br>
+                <input class="submitContent" type="submit" value="submit" />
+            </div>
+        </form>
+        </br></br></br>
+        <form class="contentForm" ng-submit="validateWebsite()">
+            <div id="websiteInformation">
+                <label class="informationContent"><b>Add a website ---------------------------------------------------</b></label>
+                </br></br>
+                <input class="contentInput" type="text" ng-model="titleWebsite" placeholder="title" /></br>
+                <input class="contentInput" type="text" ng-model="descriptionWebsite" placeholder="a quick description helps to promote" /></br>
+                <input class="contentInput" type="text" ng-model="linkWebsite" placeholder="link of website" /></br>
+                <input class="contentInput" type="text" ng-model="listTagsWebsite" placeholder="list of tags separate by a space" />
+                </br></br>
+                <input class="submitContent" type="submit" value="submit" />
+            </div>
+        </form>
+        </br></br></br>
+        <form class="contentForm" ng-submit="validateSocialNetwork()">
+            <div id="socialNetworkInformation">
+                <label class="informationContent"><b>Add a social network page ----------------------------------</b></label>
+                </br></br>
+                <input class="contentInput" type="text" ng-model="titleSocialNetwork" placeholder="title" /></br>
+                <input class="contentInput" type="text" ng-model="descriptionSocialNetwork" placeholder="a quick description helps to promote" /></br>
+                <input class="contentInput" type="text" ng-model="linkSocialNetwork" placeholder="link of social network page" /></br>
+                <input class="contentInput" type="text" ng-model="listTagsSocialNetwork" placeholder="list of tags separate by a space" />
+                </br></br>
+                <input class="submitContent" type="submit" value="submit" />
+            </div>
+        </form>
+    </div>
 </div>
