Content form / Profile form
HTML+CSS OK

Work in progress

--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,7 @@
     <link href="profile/profile.css" style="test:css" rel="stylesheet" />
     <link href="content/content.css" style="test:css" rel="stylesheet" />
     <link href="menu/menu.css" style="test:css" rel="stylesheet" />
+    <link href="settings/settings.css" style="test:css" rel="stylesheet" />
     <link href="index.css" style="test:css" rel="stylesheet" />
 </head>
 
