--- a/web/menu/menu.html
+++ b/web/menu/menu.html
@@ -5,7 +5,7 @@
         <a ui-sref=".content">content</a>
 
         <input id="searchBarInput" type="text" placeholder="Type your research here" />
-        <a id="settings" ui-sref=".settings">settings</a>
+        <a id="settings" ui-sref=".settings.preferences">settings</a>
     </div>
     <div id="homeContent" ui-view></div>
 </div>
