--- a/web/login/login.html
+++ b/web/login/login.html
@@ -14,7 +14,7 @@
          <div id="login_quick_identification">
             <table>
                 <tr>
-                    <th width="75%" id="einstein_quote"><img src="login/einstein_quote.png" ></th>
+                    <th width="75%" id="einstein_quote">Welcome to this awesome website</th>
                     <th id="quick_account_creation" width="25%" >
                         Quick account creation:
                         <table>
