--- a/web/profile/profile.html
+++ b/web/profile/profile.html
@@ -5,7 +5,7 @@
             <div id="sectionProfile">
         <form id="profileForm" ng-submit="validateProfile()">
             <div id="personalInformation">
-                <label class="informationProfile"><b>Personal information -----------------------------------------------------</b></label>
+                <label class="informationProfile"><b>Add your Personal information -----------------------------------------------------</b></label>
                 </br></br>
                 <span id="sexProfile">
                     <input type="radio" ng-model="sexProfile" value="female"/><label> female </label>
@@ -30,7 +30,7 @@
             </div>
             </br></br></br>
             <div id="searchInformation">
-                <label class="informationProfile"><b>Search information -------------------------------------------------------</b></label>
+                <label class="informationProfile"><b>Add your Search information -------------------------------------------------------</b></label>
                 </br></br>
                 <textarea rows="4" cols="50" placeholder="Give us keywords to help us find the most adapted content for you"></textarea></br>
             </div>
