CSS: profile page + content page
Work in progress

--- a/web/content/content.html
+++ b/web/content/content.html
@@ -6,10 +6,12 @@
                 <form class="contentForm" ng-submit="validateVideo()">
                     <label class="informationContent"><b>Add a video -----------------------------------------------------</b></label>
                     </br></br>
-                    <input class="contentInput" type="text" ng-model="titleVideo" placeholder="title" /></br>
-                    <input class="contentInput" type="text" ng-model="descriptionVideo" placeholder="a quick description helps to promote" /></br>
-                    <input class="contentInput" type="text" ng-model="linkVideo" placeholder="link of video" /></br>
-                    <input class="contentInput" type="text" ng-model="listTagsVideo" placeholder="list of tags separate by a space" />
+                    <table class="tableContent">
+                        <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="titleVideo" placeholder="title" /></td></tr>
+                        <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="descriptionVideo" placeholder="a quick description helps to promote" /></td></tr>
+                        <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="linkVideo" placeholder="link of video" /></td></tr>
+                        <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="listTagsVideo" placeholder="list of tags separate by a space" /></td></tr>
+                    </table>
                     </br></br>
                     <input class="submitContent" type="submit" value="submit" />
                 </form>
@@ -21,10 +23,12 @@
             <form class="contentForm" ng-submit="validateWebsite()">
                 <label class="informationContent"><b>Add a website ---------------------------------------------------</b></label>
                 </br></br>
-                <input class="contentInput" type="text" ng-model="titleWebsite" placeholder="title" /></br>
-                <input class="contentInput" type="text" ng-model="descriptionWebsite" placeholder="a quick description helps to promote" /></br>
-                <input class="contentInput" type="text" ng-model="linkWebsite" placeholder="link of website" /></br>
-                <input class="contentInput" type="text" ng-model="listTagsWebsite" placeholder="list of tags separate by a space" />
+                <table class="tableContent">
+                    <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="titleWebsite" placeholder="title" /></td></tr>
+                    <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="descriptionWebsite" placeholder="a quick description helps to promote" /></td></tr>
+                    <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="linkWebsite" placeholder="link of website" /></td></tr>
+                    <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="listTagsWebsite" placeholder="list of tags separate by a space" /></td></tr>
+                </table>
                 </br></br>
                 <input class="submitContent" type="submit" value="submit" />
             </form>
@@ -35,10 +39,12 @@
             <form class="contentForm" ng-submit="validateSocialNetwork()">
                 <label class="informationContent"><b>Add a social network page ----------------------------------</b></label>
                 </br></br>
-                <input class="contentInput" type="text" ng-model="titleSocialNetwork" placeholder="title" /></br>
-                <input class="contentInput" type="text" ng-model="descriptionSocialNetwork" placeholder="a quick description helps to promote" /></br>
-                <input class="contentInput" type="text" ng-model="linkSocialNetwork" placeholder="link of social network page" /></br>
-                <input class="contentInput" type="text" ng-model="listTagsSocialNetwork" placeholder="list of tags separate by a space" />
+                <table class="tableContent">
+                    <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="titleSocialNetwork" placeholder="title" /></td></tr>
+                    <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="descriptionSocialNetwork" placeholder="a quick description helps to promote" /></td></tr>
+                    <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="linkSocialNetwork" placeholder="link of social network page" /></td></tr>
+                    <tr><td><input class="contentInput inputStyleContent" type="text" ng-model="listTagsSocialNetwork" placeholder="list of tags separate by a space" /></td></tr>
+                </table>
                 </br></br>
                 <input class="submitContent" type="submit" value="submit" />
             </form>
