--- a/web/profile/profile.html
+++ b/web/profile/profile.html
@@ -11,28 +11,48 @@
                     <input type="radio" ng-model="sexProfile" value="female"/><label> female </label>
                     <input type="radio" ng-model="sexProfile" value="male"/><label> male </label>
                 </span></br>
-                <input type="text" ng-model="firstnameProfile" placeholder="firstname" />
-                <input type="text" ng-model="lastnameProfile" placeholder="lastname" /></br>
-                <label>Birthday : </label>
-                <input id="birthdayProfile" type="date" ng-model="birthDate" popup="d MMM yyyy"
-                                options="dateOptions" opened="opened" custom-datepicker /></br>
-                <label>Occupation : </label>
-                    <select id="occupationProfile">
-                        <option value="student">student</option>
-                        <option value="employee">employee</option>
-                    </select></br>
-                <label>Hobbies : </label>
-                <input id="hobbiesProfile" type="text" ng-model="hobbiesProfile" placeholder="hobbies" /></br>
-                <label>Country : </label>
-                <select id="countryProfile" >
-                    <option ng-repeat="country in countries" value={{country.name}}>{{country.name}}</option>
-                </select>
+                <table id="tableProfile">
+                    <tr>
+                        <td width="25%"><label>Firstname </label></td>
+                        <td><input class="style2 inputSize" type="text" ng-model="firstnameProfile" placeholder="firstname" /></td>
+                    </tr>
+                    <tr>
+                        <td><label>Lastname </label></td>
+                        <td><input class="style2 inputSize" type="text" ng-model="lastnameProfile" placeholder="lastname" /></td>
+                    </tr>
+                    <tr>
+                    <td><label>Birthday </label></td>
+                    <td><input class="style2 inputSize" type="date" ng-model="birthDate" popup="d MMM yyyy"
+                                    options="dateOptions" opened="opened" custom-datepicker /></td>
+                    </tr>
+                    <tr>
+                        <td><label>Occupation </label></td>
+                        <td>
+                            <select class="style2 selectSize">
+                                <option value="student">student</option>
+                                <option value="employee">employee</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><label>Hobbies </label></td>
+                        <td><input class="style2 inputSize" type="text" ng-model="hobbiesProfile" placeholder="hobbies" /></td>
+                    </tr>
+                    <tr>
+                        <td><label>Country </label></td>
+                        <td>
+                            <select class="style2 selectSize">
+                                <option ng-repeat="country in countries" value={{country.name}}>{{country.name}}</option>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
             </div>
             </br></br></br>
             <div id="searchInformation">
                 <label class="informationProfile"><b>Add your Search information -------------------------------------------------------</b></label>
                 </br></br>
-                <textarea rows="4" cols="50" placeholder="Give us keywords to help us find the most adapted content for you"></textarea></br>
+                <textarea class="style2" rows="4" cols="55" placeholder="Give us keywords to help us find the most adapted content for you"></textarea></br>
             </div>
             </br>
             <input id="submitProfile" type="submit" value="submit" />
