Home page display
DONE:
Work in progress

TO DO:
DAO + WebService for content page
Erase values from input fields once inserted in database (coded but don't work)
need to add Read Update Delete and Find All web services

--- a/web/home/home.html
+++ b/web/home/home.html
@@ -1,3 +1,17 @@
-<div ng-app="homeApp">
-    <h2>home page</h2>
+<div id="homePage" ng-app="homeApp">
+    <div id="menuHome">
+        <ul>
+            <li>websites</li>
+            <li>videos</li>
+            <li>social networks</li>
+        </ul>
+    </div>
+    <div id="filterHome">
+        <span id="filterParams">
+            <input type="radio" ng-model="filterParamHome" value="month"/><label>last month</label>
+            <input type="radio" ng-model="filterParamHome" value="new"/><label>new results</label>
+        </span>
+    </div>
+    <div id="resultsHome" ui-view>
+    </div>
 </div>
