--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
 
     <link href="bower_components/normalize.css/normalize.css" style="test:css" rel="stylesheet" />
     <link href="login/login.css" style="test:css" rel="stylesheet" />
+    <link href="home/home.css" style="test:css" rel="stylesheet" />
     <link href="profile/profile.css" style="test:css" rel="stylesheet" />
     <link href="content/content.css" style="test:css" rel="stylesheet" />
     <link href="menu/menu.css" style="test:css" rel="stylesheet" />
