--- a/web/home/displayResults.html
+++ b/web/home/displayResults.html
@@ -1,8 +1,9 @@
 <div>
     <h3>Display results</h3>
     <div ng-repeat="result in results">
-        <iframe width="100" height="56" src="https://www.youtube.com/embed/{{result.shortLink}}" frameborder="0"></iframe>
-        <label>{{result.title}}</label>
-        <a href="{{result.link}}">{{result.link}}</a>
+        <iframe width="100" height="56" src="https://www.youtube.com/embed/{{result.shortLinkVideo}}" frameborder="0"></iframe>
+        <label>{{result.titleVideo}}</label>
+        <a href="{{result.linkVideo}}">{{result.linkVideo}}</a>
+        <span>{{result.descriptionVideo}}</span>
     </div>
 </div>
